added title to page

--- a/index.html
+++ b/index.html
@@ -8,16 +8,21 @@
       }
     </style>
     <meta charset="utf-8" />
-    <title>Rainbow Staves</title>
   </head>
 
   <body>
-    <h1>Rainbow Staves</h1>
+    <table width="100%" border="0">
+      <tr>
+        <td align="center"><img src="./images/title.png" width="400" /></td>
+      </tr>
+      <tr>
+        <td id="loading" align="center">
+          <h1>Loading...</h1>
+        </td>
+      </tr>
+    </table>
     <p id="status"></p>
     <div>
-      <div class="loading" id="loading">
-        <h1>Loading...</h1>
-      </div>
       <div class="inputoutput" id="inputoutput" style="display: none">
         <img
           id="wholenote-1"
