--- a/index.html
+++ b/index.html
@@ -8,52 +8,56 @@
       }
     </style>
     <meta charset="utf-8" />
-  </head>
+    <img
+    id="wholenote-1"
+    src="./note-images/wholenote-1.png"
+    style="display: none"
+  />
+  <img
+    id="wholenote-2"
+    src="./note-images/wholenote-2.png"
+    style="display: none"
+  />
+  <img
+    id="wholenote-3"
+    src="./note-images/wholenote-3.png"
+    style="display: none"
+  />
+  <img
+    id="wholenote-4"
+    src="./note-images/wholenote-4.png"
+    style="display: none"
+  />
+  <img
+    id="google-wholenote-1"
+    src="./note-images/google-wholenote-1.png"
+    style="display: none"
+  />
+  <img
+    id="google-wholenote-2"
+    src="./note-images/google-wholenote-2.png"
+    style="display: none"
+  />
+</head>
 
   <body>
-    <table width="100%" border="0">
+    <table width="100%" height="300px" border="1">
       <tr>
-        <td align="center"><img src="./images/title.png" width="400" /></td>
+        <td align="center">
+          <img src="./images/title.png" width="400" />
+        </td>
       </tr>
       <tr>
         <td id="loading" align="center">
           <h1>Loading...</h1>
         </td>
+        <tr>
+          <td style="padding:0px 150px 0px 150px" id="status" height="100px"></td>
+        </tr>
       </tr>
     </table>
-    <p id="status"></p>
     <div>
       <div class="inputoutput" id="inputoutput" style="display: none">
-        <img
-          id="wholenote-1"
-          src="./note-images/wholenote-1.png"
-          style="display: none"
-        />
-        <img
-          id="wholenote-2"
-          src="./note-images/wholenote-2.png"
-          style="display: none"
-        />
-        <img
-          id="wholenote-3"
-          src="./note-images/wholenote-3.png"
-          style="display: none"
-        />
-        <img
-          id="wholenote-4"
-          src="./note-images/wholenote-4.png"
-          style="display: none"
-        />
-        <img
-          id="google-wholenote-1"
-          src="./note-images/google-wholenote-1.png"
-          style="display: none"
-        />
-        <img
-          id="google-wholenote-2"
-          src="./note-images/google-wholenote-2.png"
-          style="display: none"
-        />
         <canvas id="canvasOutput"></canvas>
         <img id="imageSrc" alt="" />
         <div class="caption">
@@ -134,7 +138,7 @@
         document.getElementById("loading").style.display = "none";
         document.getElementById("inputoutput").style.display = "block";
         document.getElementById("status").innerHTML =
-          'Rainbow Stave is ready. Please click on the "Choose file" button to select your sheet music file on your computer.';
+          'Rainbow Stave is ready. Please click on the "Choose file" button to select your sheet music file on your computer. Currently this should be an image file, eg. .jpg or .png<br/><br/>The sheet music is processed on your computer and NOT uploaded to any server.';
       }
     </script>
     <script
