fixed note sorting function. most notes are cutout now after commenting out the note after stave shortcut

--- a/index.html
+++ b/index.html
@@ -144,6 +144,8 @@
         drawStaves(newContours, src, maxLength);
         cv.imshow("canvasOutput", src);
 
+        // writeFileSync('output.jpg', canvas.toBuffer('image/jpeg'));
+
         // Clean up
         wholeNotes = [];
         src.delete();
