--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
         document.getElementById("caption").style.display = "block";
         document.getElementById("inputoutput").style.display = "block";
         document.getElementById("status").innerHTML =
-          'Rainbow Stave is ready. Please click on the "Choose file" button to select your sheet music file on your computer. Currently this should be an image file, eg. .jpg or .png<br/><br/>The sheet music is processed on your computer and NOT uploaded to any server. This is an open source project which can be access by clicking on the cat in the top right corner of this page.<br/><br/><br/><br/>';
+          'Rainbow Stave is ready. Please click on the "Choose file" button to select your sheet music file on your computer. Currently this should be an image file, eg. .jpg or .png<br/><br/>The sheet music is processed on your computer and NOT uploaded to any server. This is an open source project which can be accessed by clicking on the cat in the top right corner of this page.<br/><br/><br/><br/>';
       }
     </script>
     <script
